code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_closed.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_closed
---
 +------------------------------------------------------------------------------------------------+
 |                                           Every Code                                           |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Current model: GPT-5.5                                              | |
 |    Accounts           |  Reasoning effort: Medium                                            | |
 |    Agents             |                                                                      | |
 |    Prompts            |  Mode Settings                                                       | |
 |    Memories           |  Fast mode speeds up replies. 1M Context is available on supported m | |
 |    Skills             |  › Fast Mode: disabled                                               | |
 |    Auto Drive         |    1M Context: unavailable                                           | |
 |    Review             |  Unavailable for this model. Saved settings apply automatically on s | |
 |    Planning           |                                                                      | |
 |    Validation         |  ↑↓ Navigate  Enter Select  Esc Cancel                               | |
 |    Chrome             |                                                                      | |
 |  ↓ MCP                +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
