code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_open
---
 +------------------------------------------------------------------------------------------------+
 |                                           Every Code                                           |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Curren+------------------------------+                              | |
 |    Accounts           |  Reason|Model Shortcuts               |                              | |
 |    Agents             |        |                              |                              | |
 |    Prompts            |  Fast m|• Esc    Return to overview   |                              | |
 |    Memories           |  Same m|• Tab    Cycle sections       |(uses 2x credits)             | |
 |    Skills             |  › Fast|• Shift+Tab  Cycle backwards  |                              | |
 |    Auto Drive         |        |• ?      Toggle this help     |                              | |
 |    Review             |  GPT-5.|                              |                              | |
 |    Planning           |        |Press Esc to close            |                              | |
 |    Validation         |  ↑↓ Nav+------------------------------+                              | |
 |    Chrome             |                                                                      | |
 |  ↓ MCP                +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
